saint-lascivious.github.io: dns prefetch in pokedex, adjust drawer
 - also adjust pokedex link to 265, go straight to pokemon# card

Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   pokedexoverdns.html

--- a/265.html
+++ b/265.html
@@ -118,7 +118,8 @@
             </p>
             <pre>
 dig +short txt wurmple.pokedex @dns.sainternet.xyz
-
+            </pre>
+            <pre>
 dig +short txt 265.pokedex @dns.sainternet.xyz
             </pre>
             <p>
@@ -126,7 +127,8 @@ dig +short txt 265.pokedex @dns.sainternet.xyz
             </p>
             <pre>
 RRTYPE=TXT dnslookup wurmple.pokedex dns.sainternet.xyz
-
+            </pre>
+            <pre>
 RRTYPE=TXT dnslookup 265.pokedex dns.sainternet.xyz
             </pre>
             <p>
@@ -134,7 +136,8 @@ RRTYPE=TXT dnslookup 265.pokedex dns.sainternet.xyz
             </p>
             <pre>
 nslookup -type=txt wurmple.pokedex dns.sainternet.xyz
-
+            </pre>
+            <pre>
 nslookup -type=txt 265.pokedex dns.sainternet.xyz
             </pre>
           </div>
