--- a/404.html
+++ b/404.html
@@ -84,8 +84,8 @@
         </nav>
         <span class="mdl-layout-title">???</span>
         <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="/265.html"> - ???</a>
           <a class="mdl-navigation__link" href="#pokemon404"><b>???</b></a>
+          <a class="mdl-navigation__link" href="/265.html#pokemon265"> - ???</a>
         </nav>
       </div>
       <div class="light_blue-ribbon"></div>
@@ -123,7 +123,8 @@
             </p>
             <pre>
 dig +short txt luxio.pokedex @dns.sainternet.xyz
-
+            </pre>
+            <pre>
 dig +short txt 404.pokedex @dns.sainternet.xyz
             </pre>
             <p>
@@ -131,7 +132,8 @@ dig +short txt 404.pokedex @dns.sainternet.xyz
             </p>
             <pre>
 RRTYPE=TXT dnslookup luxio.pokedex dns.sainternet.xyz
-
+            </pre>
+            <pre>
 RRTYPE=TXT dnslookup 404.pokedex dns.sainternet.xyz
             </pre>
             <p>
@@ -139,7 +141,8 @@ RRTYPE=TXT dnslookup 404.pokedex dns.sainternet.xyz
             </p>
             <pre>
 nslookup -type=txt luxio.pokedex dns.sainternet.xyz
-
+            </pre>
+            <pre>
 nslookup -type=txt 404.pokedex dns.sainternet.xyz
             </pre>
           </div>
