saint-lascivious.github.io: add note for legacy QUIC ports
Changes to be committed:
 - modified:   portsandprotocols.html

--- a/portsandprotocols.html
+++ b/portsandprotocols.html
@@ -142,6 +142,7 @@
             </p>
             <ol>
               <li>Where multiple values are present the default is listed in bold.</li>
+              <li>UDP 784 and UDP 8853 were previously proposed default ports for the QUIC specification, and as QUIC has only fairly recently (in the grander scheme) been standardised several services/tools still currently use one or both of the originally proposed ports.<br>These deprecated ports will be closed at some point in the not terribly distant future, at which time Sainternet QUIC will be served exclusively over UDP 853.</li>
             </ol>
            </div>
         </div>
