--- a/404.html
+++ b/404.html
@@ -82,10 +82,11 @@
           <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
           <a class="mdl-navigation__link" href="/projects.html">Projects</a>
         </nav>
+        <!-- believe it or not, this mess is deliberate -->
         <span class="mdl-layout-title">???</span>
         <nav class="mdl-navigation">
+          <a class="mdl-navigation__link" href="/265.html#pokemon265">???</a>
           <a class="mdl-navigation__link" href="#pokemon404"><b>???</b></a>
-          <a class="mdl-navigation__link" href="/265.html#pokemon265"> - ???</a>
         </nav>
       </div>
       <div class="light_blue-ribbon"></div>
@@ -158,7 +159,7 @@ nslookup -type=txt 404.pokedex dns.sainternet.xyz
         </ul>
       </div>
     </footer>
-    <a href="/index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp">Home</a>
+    <a href="https://sainternet.xyz" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp">Home</a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script type="text/javascript" src="resources/javascript/sainternet.js"></script>
   </body>
