--- a/projects.html
+++ b/projects.html
@@ -180,7 +180,7 @@
         </ul>
       </div>
     </footer>
-    <a href="/index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp">Home</a>
+    <a href="https://sainternet.xyz" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp">Home</a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script type="text/javascript" src="resources/javascript/sainternet.js"></script>
   </body>
