--- a/portsandprotocols.html
+++ b/portsandprotocols.html
@@ -157,7 +157,7 @@
         </ul>
       </div>
     </footer>
-    <a href="https://sainternet.xyz" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp">Home</a>
+    <a href="https://sainternet.xyz" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp"><icon class="material-icons">home</icon></a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script type="text/javascript" src="/resources/javascript/sainternet.js"></script>
   </body>
