saint-lascivious.github.io: full dark mode (follows system theme)
Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   resources/stylesheets/sainternet.css
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/404.html
+++ b/404.html
@@ -93,15 +93,15 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <div class="sainternet-crumbs mdl-color-text--grey-500">
+          <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
+            <div class="sainternet-crumbs">
               <a href="/index.html">Home</a> &gt; <a href="#pokemon404"><b>Pokémon #404</b></a><br><a href="#example">Example Queries</a>
             </div>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="pokemon404">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Pokémon #404<br>Luxio<br>(Spark Pokémon)</span></h3>
             <picture>
               <source srcset="resources/images/luxio-shiny.png" media="(prefers-color-scheme: dark)">
@@ -117,7 +117,7 @@
         </div>
         <div class="sainternet-container mdl-grid" id="example">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Example Pokédex over DNS Queries</span></h3>
             <p>
               Example Pokédex over DNS queries using <a href="https://linux.die.net/man/1/dig">dig</a>:
