--- a/newsandupdates.html
+++ b/newsandupdates.html
@@ -82,15 +82,15 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <div class="sainternet-crumbs mdl-color-text--grey-500">
+          <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
+            <div class="sainternet-crumbs">
               <a href="/index.html">Home</a> &gt; <a href="#newsandupdates">News and Updates</a><br><a href="#iosmacosmadeeasy">iOS/macOS Made Easy</a>
             </div>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="newsandupdates">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">News and Updates</span></h3>
             <p>
               This page will serve to detail news and updates relevant to Sainternet such as new features and developments, planned maintenance, etc.
@@ -102,7 +102,7 @@
         </div>
         <div class="sainternet-container mdl-grid" id="iosmacosmadeeasy">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><icon class="fa-brands fa-apple"></icon> <span class="embiggen">iOS/macOS Made Easy</span></h3>
             <p id="datetime">
               Friday, 18 November 2022 22:30+13:00 (NZDT)
