--- a/projects.html
+++ b/projects.html
@@ -81,15 +81,15 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <div class="sainternet-crumbs mdl-color-text--grey-500">
+          <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
+            <div class="sainternet-crumbs">
               <a href="/index.html">Home</a> &gt; <a href="#projects"><b>Popular Projects</b></a><br><a href="#dnsproxy-config">dnsproxy config</a>, <a href="#haha_cache_go_brrr">haha cache go brrr</a>, <a href="#munin-pihole-plugins">munin pihole plugins</a>, <a href="#saint-lascivious_github_io">sainternet.xyz</a>, <a href="#unbound-config">unbound config</a>
             </div>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="projects">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Popular Projects</span></h3>
             <p>
               This page lists some of my more popular projects on GitHub.
@@ -98,7 +98,7 @@
         </div>
         <div class="sainternet-container mdl-grid" id="dnsproxy-config">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">dnsproxy config</span></h3>
             <p>
               <a href="https://github.com/saint-lascivious/dnsproxy-config">dnsproxy-config</a>
@@ -113,7 +113,7 @@
         </div>
         <div class="sainternet-container mdl-grid" id="haha_cache_go_brrr">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">haha cache go brrr</span></h3>
             <p>
               <a href="https://github.com/saint-lascivious/haha_cache_go_brrr">haha_cache_go_brrr</a>
@@ -125,7 +125,7 @@
         </div>
         <div class="sainternet-container mdl-grid" id="munin-pihole-plugins">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">munin pihole plugins</span></h3>
             <p>
               <a href="https://github.com/saint-lascivious/munin-pihole-plugins">munin-pihole-plugins</a>
@@ -137,7 +137,7 @@
         </div>
         <div class="sainternet-container mdl-grid" id="saint-lascivious_github_io">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">sainternet.xyz</span></h3>
             <p>
               <a href="https://github.com/saint-lascivious/saint-lascivious.github.io">saint-lascivious.github.io</a>
@@ -156,7 +156,7 @@
         </div>
         <div class="sainternet-container mdl-grid" id="unbound-config">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">unbound config</span></h3>
             <p>
               <a href="https://github.com/pi-hole/FTL">unbound-config</a>
