--- a/connecttosainternet.html
+++ b/connecttosainternet.html
@@ -86,15 +86,15 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <div class="sainternet-crumbs mdl-color-text--grey-500">
+          <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
+            <div class="sainternet-crumbs">
               <a href="/index.html">Home</a> &gt; <a href="/filtereddns.html">Filtered DNS</a> &gt; <a href="#connecttosainternet"><b>Connect to Sainternet</b></a><br><a href="#androidprivatedns">Android Private DNS</a>, <a href="#appleiosmacos">Apple iOS/MacOS</a>, <a href="#googlechromechromium">Google Chrome/Chromium</a>, <a href="#mozillafirefox">Mozilla Firefox</a>
             </div>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="connecttosainternet">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Connect to Sainternet</span></h3>
             <p>
               The following describes connecting to Sainternet Filtered DNS in several platforms, services.
@@ -103,7 +103,7 @@
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3 id="androidprivatedns"><icon class="fa-brands fa-android"></icon> <span class="embiggen">Android<br>Private DNS</span></h3>
             <p align="center">
               Android 9 (Pie) or higher required.
@@ -121,7 +121,7 @@
         </div>
         <div class="sainternet-container mdl-grid" id="appleiosmacos">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><icon class="fa-brands fa-apple"></icon> <span class="embiggen">Apple<br>iOS/macOS</span></h3>
             <p align="center">
               Apple iOS 14/macOS Big Sur or higher required.
@@ -165,7 +165,7 @@
         </div>
         <div class="sainternet-container mdl-grid" id="googlechromechromium">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><icon class="fa-brands fa-chrome"></icon> <span class="embiggen">Google<br>Chrome/Chromium</span></h3>
             <ol>
               <li>Overflow Menu <icon class="fa-solid fa-ellipsis-vertical"></icon></li>
@@ -180,7 +180,7 @@
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3 id="mozillafirefox"><icon class="fa-brands fa-firefox-browser"></icon> <span class="embiggen">Mozilla<br>Firefox</span></h3>
             <ol>
               <li>Menu <icon class="fa-solid fa-bars"></icon></li>
