--- a/frequentlyaskedquestions.html
+++ b/frequentlyaskedquestions.html
@@ -86,15 +86,15 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <div class="sainternet-crumbs mdl-color-text--grey-500">
+          <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
+            <div class="sainternet-crumbs">
               <a href="/index.html">Home</a> &gt; <a href="/filtereddns.html">Filtered DNS</a> &gt; <a href="#frequentlyaskedquestions"><b>Frequently Asked Questions</b></a><br><a href="#whowhatwhenwhereandwhy">Who, What, When, Where and Why?</a>, <a href="#howmuch">How Much?</a>, <a href="#howdoessainternetmakemoney">How does Sainternet Make Money?</a>, <a href="#sowhofundssainternet">So, Who Funds Sainternet?</a>
             </div>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="frequentlyaskedquestions">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Frequently Asked Questions</span></h3>
             <p>
               Answers to some frequently asked questions regarding Sainternet Filtered DNS.
@@ -103,7 +103,7 @@
         </div>
         <div class="sainternet-container mdl-grid" id="whowhatwhenwhereandwhy">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Who, What,<br>When, Where and Why?</span></h3>
             <p align="center">
               <b>Who?</b>
@@ -153,7 +153,7 @@
         </div>
         <div class="sainternet-container mdl-grid" id="howmuch">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">How Much?</span></h3>
             <p>
               Nothing.
@@ -165,7 +165,7 @@
         </div>
         <div class="sainternet-container mdl-grid" id="howdoessainternetmakemoney">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">How does Sainternet Make Money?</span></h3>
             <p>
               It doesn't.
@@ -174,7 +174,7 @@
         </div>
         <div class="sainternet-container mdl-grid" id="sowhofundssainternet">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">So, Who Funds Sainternet?</span></h3>
             <p>
               I do.
