--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid" id="welcome">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Welcome</span></h3>
             <picture>
               <source srcset="resources/images/wurmple-shiny.png" media="(prefers-color-scheme: dark)">
