--- a/testsainternet.html
+++ b/testsainternet.html
@@ -87,15 +87,15 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <div class="sainternet-crumbs mdl-color-text--grey-500">
+          <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
+            <div class="sainternet-crumbs">
               <a href="/index.html">Home</a> &gt; <a href="/filtereddns.html">Filtered DNS</a> &gt; <a href="#testsainternet"><b>Test Sainternet</b></a><br><a href="#usingdig">Using dig</a>, <a href="#usingdnslookup">Using dnslookup</a>, <a href="#usingnslookup">Using nslookup</a>
             </div>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="testsainternet">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Test Sainternet</span></h3>
             <p>
               The following describes testing Sainternet Filtered DNS using several methods, utilities.
@@ -104,7 +104,7 @@
         </div>
         <div class="sainternet-container mdl-grid" id="usingdig">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Using dig</span></h3>
             <p>
               Example Sainternet test query using <a href="https://linux.die.net/man/1/dig">dig</a>:
@@ -116,7 +116,7 @@ dig +short txt test.sainternet.xyz
         </div>
         <div class="sainternet-container mdl-grid" id="usingdnslookup">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Using dnslookup</span></h3>
             <p>
               Example Sainternet test query using <a href="https://github.com/ameshkov/dnslookup">dnslookup</a>:
@@ -170,7 +170,7 @@ dnslookup example.org quic://dns.sainternet.xyz
         </div>
         <div class="sainternet-container mdl-grid" id="usingnslookup">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Using nslookup</span></h3>
             <p>
               Example Sainternet test query using <a href="https://linux.die.net/man/1/nslookup">nslookup</a>:
