--- a/pokedexoverdns.html
+++ b/pokedexoverdns.html
@@ -96,7 +96,7 @@
             </div>
           </div>
         </div>
-        <div class="sainternet-container mdl-grid" id="pokedexoverdens">
+        <div class="sainternet-container mdl-grid" id="pokedexoverdns">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">National Pokédex over DNS</span></h3>
