saint-lascivious.github.io: newsandupdates, announce dark theme
 - also, reposition fab slightly

Changes to be committed:
 - modified:   newsandupdates.html
 - modified:   resources/stylesheets/button_home.css

--- a/newsandupdates.html
+++ b/newsandupdates.html
@@ -84,7 +84,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs">
-              <a href="/index.html">Home</a> &gt; <a href="#newsandupdates">News and Updates</a><br><a href="#iosmacosmadeeasy">iOS/macOS Made Easy</a>
+              <a href="/index.html">Home</a> &gt; <a href="#newsandupdates">News and Updates</a><br><a href="materialdesigndark">Material Design <s>Lite</s> Dark</a>, <a href="#iosmacosmadeeasy">iOS/macOS Made Easy</a>
             </div>
           </div>
         </div>
@@ -100,10 +100,25 @@
             </p>
            </div>
         </div>
+        <div class="sainternet-container mdl-grid" id="materialdesigndark">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
+            <h3><span class="embiggen">Material Design <s>Lite</s> Dark</span></h3>
+            <p id="datetime">
+              Thursday, 8 December 2022 13:00+13:00 (NZDT)
+            </p>
+            <p>
+              There have been several changes to the design and layout of these pages over the past short while, with one of the more drastic and noticeable changes being a full dark theme that follows the system theme and/or browser preference.
+            </p>
+            <p>
+              I plan on making all this available as a standalone template at some point in the near future, and when I do I'll more than likely make some form of noise about it here.
+            </p>
+           </div>
+        </div>
         <div class="sainternet-container mdl-grid" id="iosmacosmadeeasy">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
-            <h3><icon class="fa-brands fa-apple"></icon> <span class="embiggen">iOS/macOS Made Easy</span></h3>
+            <h3><span class="embiggen">iOS/macOS Made Easy</span></h3>
             <p id="datetime">
               Friday, 18 November 2022 22:30+13:00 (NZDT)
             </p>
