saint-lascivious.github.io: more dynamic text
 - adjust embiggen's transition time
 - embiggen most action/nav texts
 - fix a breadcrumb link in newsandupdates

Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   resources/stylesheets/sainternet.css
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/265.html
+++ b/265.html
@@ -58,7 +58,7 @@
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title"><span class="embiggen">saint</span><span style="font-weight: 300">ernet.xyz</span></span>
+          <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
             <a class="mdl-navigation__link" href="/index.html">Home</a>
@@ -70,7 +70,7 @@
         </div>
       </header>
       <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">sainternet.xyz</span>
+        <span class="embiggen mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="/index.html">Home</a>
           <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
@@ -79,9 +79,9 @@
           <a class="mdl-navigation__link" href="/projects.html">Projects</a>
         </nav>
         <!-- believe it or not, this mess is deliberate -->
-        <span class="mdl-layout-title">???</span>
+        <span class="embiggen mdl-layout-title">???</span>
         <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="#pokemon265"><b>???</b></a>
+          <a class="embiggen mdl-navigation__link" href="#pokemon265"><b>???</b></a>
         </nav>
       </div>
       <div class="pink-ribbon"></div>
@@ -90,7 +90,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs">
-              <a href="/index.html">Home</a> &gt; <a href="#pokemon265"><b>Pokémon #265</b></a><br><a href="#example">Example Queries</a>
+              <a class="embiggen" href="/index.html">Home</a> &gt; <a class="embiggen" href="#pokemon265"><b>Pokémon #265</b></a><br><a class="embiggen" href="#example">Example Queries</a>
             </div>
           </div>
         </div>
