--- a/connecttosainternet.html
+++ b/connecttosainternet.html
@@ -56,30 +56,30 @@
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title"><span class="embiggen">saint</span><span style="font-weight: 300">ernet.xyz</span></span>
+          <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
-            <a class="mdl-navigation__link" href="/index.html">Home</a>
-            <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
-            <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
-            <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-            <a class="mdl-navigation__link" href="/projects.html">Popular Projects</a>
+            <a class="embiggen mdl-navigation__link" href="/index.html">Home</a>
+            <a class="embiggen mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
+            <a class="embiggen mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
+            <a class="embiggen mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
+            <a class="embiggen mdl-navigation__link" href="/projects.html">Popular Projects</a>
           </nav>
         </div>
       </header>
       <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">sainternet.xyz</span>
+        <span class="embiggen mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="/index.html">Home</a>
-          <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
-          <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
-          <a class="mdl-navigation__link" href="/frequentlyaskedquestions.html"> - FAQs</a>
-          <a class="mdl-navigation__link" href="#connecttosainternet"> <b>- Connect to Sainternet</b></a>
-          <a class="mdl-navigation__link" href="/portsandprotocols.html"> - Ports and Protocols</a>
-          <a class="mdl-navigation__link" href="/technologies.html"> - Technologies</a>
-          <a class="mdl-navigation__link" href="/testsainternet.html"> - Test Sainternet</a>
-          <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-          <a class="mdl-navigation__link" href="/projects.html">Popular Projects</a>
+          <a class="embiggen mdl-navigation__link" href="/index.html">Home</a>
+          <a class="embiggen mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
+          <a class="embiggen mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
+          <a class="embiggen mdl-navigation__link" href="/frequentlyaskedquestions.html"> - FAQs</a>
+          <a class="embiggen mdl-navigation__link" href="#connecttosainternet"> <b>- Connect to Sainternet</b></a>
+          <a class="embiggen mdl-navigation__link" href="/portsandprotocols.html"> - Ports and Protocols</a>
+          <a class="embiggen mdl-navigation__link" href="/technologies.html"> - Technologies</a>
+          <a class="embiggen mdl-navigation__link" href="/testsainternet.html"> - Test Sainternet</a>
+          <a class="embiggen mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
+          <a class="embiggen mdl-navigation__link" href="/projects.html">Popular Projects</a>
         </nav>
       </div>
       <div class="yellow-ribbon"></div>
@@ -88,7 +88,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs">
-              <a href="/index.html">Home</a> &gt; <a href="/filtereddns.html">Filtered DNS</a> &gt; <a href="#connecttosainternet"><b>Connect to Sainternet</b></a><br><a href="#androidprivatedns">Android Private DNS</a>, <a href="#appleiosmacos">Apple iOS/MacOS</a>, <a href="#googlechromechromium">Google Chrome/Chromium</a>, <a href="#mozillafirefox">Mozilla Firefox</a>
+              <a class="embiggen" href="/index.html">Home</a> &gt; <a class="embiggen" href="/filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#connecttosainternet"><b>Connect to Sainternet</b></a><br><a class="embiggen" href="#androidprivatedns">Android Private DNS</a>, <a class="embiggen" href="#appleiosmacos">Apple iOS/MacOS</a>, <a class="embiggen" href="#googlechromechromium">Google Chrome/Chromium</a>, <a class="embiggen" href="#mozillafirefox">Mozilla Firefox</a>
             </div>
           </div>
         </div>
@@ -136,19 +136,19 @@
             </ol>
             <div class="sainternet-list-action mdl-list">
               <div class="mdl-list__item">
-                <span class="mdl-list__item-primary-content">
+                <span class="embiggen mdl-list__item-primary-content">
                   <span>DNS over HTTPS</span>
                 </span>
                 <a class="mdl-list__item-secondary-action"  href="/downloads/apple/sainternet-https-only.mobileconfig" download="sainternet-https-only.mobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
               </div>
               <div class="mdl-list__item">
-                <span class="mdl-list__item-primary-content">
+                <span class="embiggen mdl-list__item-primary-content">
                   <span>DNS over TLS</span>
                 </span>
                 <a class="mdl-list__item-secondary-action"  href="/downloads/apple/sainternet-tls-only.mobileconfig" download="sainternet-tls-only.mobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
               </div>
               <div class="mdl-list__item" id="recommendeddnsprofile">
-                <span class="mdl-list__item-primary-content">
+                <span class="embiggen mdl-list__item-primary-content">
                   <span>DNS over HTTPS/TLS</span>
                 </span>
                 <a class="mdl-list__item-secondary-action"  href="/downloads/apple/sainternet-https-and-tls.mobileconfig" download="sainternet-https-and-tls.mobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
