--- a/newsandupdates.html
+++ b/newsandupdates.html
@@ -57,25 +57,25 @@
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title"><span class="embiggen">saint</span><span style="font-weight: 300">ernet.xyz</span></span>
+          <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
-            <a class="mdl-navigation__link" href="/index.html">Home</a>
-            <a class="mdl-navigation__link" href="#newsandupdates"><b>News and Updates</b></a>
-            <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
-            <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-            <a class="mdl-navigation__link" href="/projects.html">Popular Projects</a>
+            <a class="embiggen mdl-navigation__link" href="/index.html">Home</a>
+            <a class="embiggen mdl-navigation__link" href="#newsandupdates"><b>News and Updates</b></a>
+            <a class="embiggen mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
+            <a class="embiggen mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
+            <a class="embiggen mdl-navigation__link" href="/projects.html">Popular Projects</a>
           </nav>
         </div>
       </header>
       <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">sainternet.xyz</span>
+        <span class="embiggen mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="/index.html">Home</a>
-          <a class="mdl-navigation__link" href="#newsandupdates"><b>News and Updates</b></a>
-          <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
-          <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-          <a class="mdl-navigation__link" href="/projects.html">Popular Projects</a>
+          <a class="embiggen mdl-navigation__link" href="/index.html">Home</a>
+          <a class="embiggen mdl-navigation__link" href="#newsandupdates"><b>News and Updates</b></a>
+          <a class="embiggen mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
+          <a class="embiggen mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
+          <a class="embiggen mdl-navigation__link" href="/projects.html">Popular Projects</a>
         </nav>
       </div>
       <div class="deep_orange-ribbon"></div>
@@ -84,7 +84,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs">
-              <a href="/index.html">Home</a> &gt; <a href="#newsandupdates">News and Updates</a><br><a href="materialdesigndark">Material Design <s>Lite</s> Dark</a>, <a href="#iosmacosmadeeasy">iOS/macOS Made Easy</a>
+              <a class="embiggen" href="/index.html">Home</a> &gt; <a class="embiggen" href="#newsandupdates">News and Updates</a><br><a class="embiggen" href="#materialdesigndark">Material Design <s>Lite</s> Dark</a>, <a class="embiggen" href="#iosmacosmadeeasy">iOS/macOS Made Easy</a>
             </div>
           </div>
         </div>
@@ -104,7 +104,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Material Design <s>Lite</s> Dark</span></h3>
-            <p id="datetime">
+            <p class="embiggen" id="datetime">
               Thursday, 8 December 2022 13:00+13:00 (NZDT)
             </p>
             <p>
@@ -119,7 +119,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">iOS/macOS Made Easy</span></h3>
-            <p id="datetime">
+            <p class="embiggen" id="datetime">
               Friday, 18 November 2022 22:30+13:00 (NZDT)
             </p>
             <p>
