--- a/404.html
+++ b/404.html
@@ -62,31 +62,31 @@
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title"><span class="embiggen">saint</span><span style="font-weight: 300">ernet.xyz</span></span>
+          <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
-            <a class="mdl-navigation__link" href="/index.html">Home</a>
-            <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
-            <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
-            <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-            <a class="mdl-navigation__link" href="/projects.html">Projects</a>
+            <a class="embiggen mdl-navigation__link" href="/index.html">Home</a>
+            <a class="embiggen mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
+            <a class="embiggen mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
+            <a class="embiggen mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
+            <a class="embiggen mdl-navigation__link" href="/projects.html">Projects</a>
           </nav>
         </div>
       </header>
       <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">sainternet.xyz</span>
+        <span class="embiggen mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="/index.html">Home</a>
-          <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
-          <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
-          <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-          <a class="mdl-navigation__link" href="/projects.html">Projects</a>
+          <a class="embiggen mdl-navigation__link" href="/index.html">Home</a>
+          <a class="embiggen mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
+          <a class="embiggen mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
+          <a class="embiggen mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
+          <a class="embiggen mdl-navigation__link" href="/projects.html">Projects</a>
         </nav>
         <!-- believe it or not, this mess is deliberate -->
-        <span class="mdl-layout-title">???</span>
+        <span class="embiggen mdl-layout-title">???</span>
         <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="/265.html#pokemon265">???</a>
-          <a class="mdl-navigation__link" href="#pokemon404"><b>???</b></a>
+          <a class="embiggen mdl-navigation__link" href="/265.html#pokemon265">???</a>
+          <a class="embiggen mdl-navigation__link" href="#pokemon404"><b>???</b></a>
         </nav>
       </div>
       <div class="light_blue-ribbon"></div>
@@ -95,7 +95,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs">
-              <a href="/index.html">Home</a> &gt; <a href="#pokemon404"><b>Pokémon #404</b></a><br><a href="#example">Example Queries</a>
+              <a class="embiggen" href="/index.html">Home</a> &gt; <a class="embiggen" href="#pokemon404"><b>Pokémon #404</b></a><br><a class="embiggen" href="#example">Example Queries</a>
             </div>
           </div>
         </div>
