--- a/index.html
+++ b/index.html
@@ -71,25 +71,25 @@
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title"><span class="embiggen">saint</span><span style="font-weight: 300">ernet.xyz</span></span>
+          <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
-            <a class="mdl-navigation__link" href="#welcome"><b>Home</b></a>
-            <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
-            <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
-            <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-            <a class="mdl-navigation__link" href="/projects.html">Popular Projects</a>
+            <a class="embiggen mdl-navigation__link" href="#welcome"><b>Home</b></a>
+            <a class="embiggen mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
+            <a class="embiggen mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
+            <a class="embiggen mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
+            <a class="embiggen mdl-navigation__link" href="/projects.html">Popular Projects</a>
           </nav>
         </div>
       </header>
       <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">sainternet.xyz</span>
+        <span class="embiggen mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="#welcome"><b>Home</b></a>
-          <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
-          <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
-          <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-          <a class="mdl-navigation__link" href="/projects.html">Popular Projects</a>
+          <a class="embiggen mdl-navigation__link" href="#welcome"><b>Home</b></a>
+          <a class="embiggen mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
+          <a class="embiggen mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
+          <a class="embiggen mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
+          <a class="embiggen mdl-navigation__link" href="/projects.html">Popular Projects</a>
         </nav>
       </div>
       <div class="red-ribbon"></div>
