--- a/projects.html
+++ b/projects.html
@@ -56,25 +56,25 @@
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title"><span class="embiggen">saint</span><span style="font-weight: 300">ernet.xyz</span></span>
+          <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
-            <a class="mdl-navigation__link" href="/index.html">Home</a>
-            <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
-            <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
-            <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-            <a class="mdl-navigation__link" href="#projects"><b>Popular Projects</b></a>
+            <a class="embiggen mdl-navigation__link" href="/index.html">Home</a>
+            <a class="embiggen mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
+            <a class="embiggen mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
+            <a class="embiggen mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
+            <a class="embiggen mdl-navigation__link" href="#projects"><b>Popular Projects</b></a>
           </nav>
         </div>
       </header>
       <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">sainternet.xyz</span>
+        <span class="embiggen mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="/index.html">Home</a>
-          <a class="mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
-          <a class="mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
-          <a class="mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
-          <a class="mdl-navigation__link" href="#projects"><b>Popular Projects</b></a>
+          <a class="embiggen mdl-navigation__link" href="/index.html">Home</a>
+          <a class="embiggen mdl-navigation__link" href="/newsandupdates.html">News and Updates</a>
+          <a class="embiggen mdl-navigation__link" href="/filtereddns.html">Filtered DNS</a>
+          <a class="embiggen mdl-navigation__link" href="/pokedexoverdns.html">Pokédex over DNS</a>
+          <a class="embiggen mdl-navigation__link" href="#projects"><b>Popular Projects</b></a>
         </nav>
       </div>
       <div class="purple-ribbon"></div>
@@ -83,7 +83,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs">
-              <a href="/index.html">Home</a> &gt; <a href="#projects"><b>Popular Projects</b></a><br><a href="#dnsproxy-config">dnsproxy config</a>, <a href="#haha_cache_go_brrr">haha cache go brrr</a>, <a href="#munin-pihole-plugins">munin pihole plugins</a>, <a href="#saint-lascivious_github_io">sainternet.xyz</a>, <a href="#unbound-config">unbound config</a>
+              <a class="embiggen" href="/index.html">Home</a> &gt; <a class="embiggen" href="#projects"><b>Popular Projects</b></a><br><a class="embiggen" href="#dnsproxy-config">dnsproxy config</a>, <a class="embiggen" href="#haha_cache_go_brrr">haha cache go brrr</a>, <a class="embiggen" href="#munin-pihole-plugins">munin pihole plugins</a>, <a class="embiggen" href="#saint-lascivious_github_io">sainternet.xyz</a>, <a class="embiggen" href="#unbound-config">unbound config</a>
             </div>
           </div>
         </div>
