saint-lascivious.github.io: tooltips for social icons in footer
Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/404.html
+++ b/404.html
@@ -152,10 +152,46 @@ nslookup -type=txt 404.pokedex dns.sainternet.xyz
     <footer class="sainternet-footer mdl-mini-footer">
       <div class="mdl-mini-footer--left-section">
         <ul class="mdl-mini-footer--link-list">
-          <li><a href="mailto:saint@sainternet.xyz" target="_blank" rel="noopener noreferrer"><icon class="fa-solid fa-at"></icon></a></li>
-          <li><a href="https://discord.gg/NC7taVyn"><icon class="fa-brands fa-discord"></icon></a></li>
-          <li><a href="https://github.com/saint-lascivious"><icon class="fa-brands fa-github"></icon></a></li>
-          <li><a href="https://www.reddit.com/user/saint-lascivious"><icon class="fa-brands fa-reddit"></icon></a></li>
+          <li>
+            <a href="mailto:saint@sainternet.xyz" target="_blank" rel="noopener noreferrer">
+              <span id="tooltip-email">
+                <icon class="fa-solid fa-at"></icon>
+              </span>
+              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-email">
+                Email
+              </span>
+            </a>
+          </li>
+          <li>
+            <a href="https://discord.gg/NC7taVyn">
+              <span id="tooltip-discord">
+                <icon class="fa-brands fa-discord"></icon>
+              </span>
+              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-discord">
+                Discord
+              </span>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/saint-lascivious">
+              <span id="tooltip-github">
+                <icon class="fa-brands fa-github"></icon>
+              </span>
+              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-github">
+                GitHub
+              </span>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.reddit.com/user/saint-lascivious">
+              <span id="tooltip-reddit">
+                <icon class="fa-brands fa-reddit"></icon>
+              </span>
+              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-reddit">
+                Reddit
+              </span>
+            </a>
+          </li>
         </ul>
       </div>
     </footer>
